# X-LINUX-IOT01E

./: readme.txt
linux_demo/: CMakeLists.txt
linux_demo/platform/Inc/: pltf_gpio.h  pltf_spi.h
linux_demo/platform/Inc/spirit1/: platform.h
linux_demo/platform/Src/: pltf_gpio.c  pltf_spi.c  pltf_timer.c
linux_demo/spirit_application/: CMakeLists.txt
linux_demo/spirit_application/Inc/: MCU_Interface.h  SDK_Configuration_Common.h  SPIRIT1_Util.h  p2p_lib.h  radio_appli.h  radio_gpio.h  radio_shield_config.h  radio_spi.h  s2lp_interface.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  stm32l0xx_hal_conf.h  stm32l0xx_it.h  stm32l1xx_hal_conf.h  stm32l1xx_it.h  stm32xx_it.h
linux_demo/spirit_application/Src/: SPIRIT1_Util.c  SPIRIT_Gpio.c  SPIRIT_Irq.c  SPIRIT_Qi.c  SPIRIT_Radio.c  SPIRIT_Types.c  main.c  radio_appli.c  radio_gpio.c  radio_spi.c
